# copilot-api

./: .gitignore  CLAUDE.md  README.md  package.json
.claude/: settings.json
docs/: ADR.md  IMPLEMENTATION-GUIDE.md  IMPLEMENTATION-STATUS.md  MIGRATION-STATUS.md  NEON-COMPILATION-FIX.md  PERFORMANCE_BENCHMARKS.md  PHASE-1-VALIDATION-REPORT.md  PHASE2_COMPLETION_REPORT.md  PRD.md  README.md  architecture.md  system_design.md
native/: Cargo.toml  build.rs
native/src/: lib.rs
native/src/auth/: mod.rs
native/src/github/: mod.rs
native/src/utils/: mod.rs  rate_limit.rs  tokenizer.rs  validation.rs
rust-gateway/: Cargo.toml
rust-gateway/src/: cli.rs  client.rs  handlers.rs  lib.rs  main.rs  routes.rs  server.rs  state.rs
rust-gateway/tests/: gateway.rs
src/lib/: hybrid-tokenizer.ts  rust-core.ts  tokenizer.ts
src/routes/chat-completions/: handler.ts
src/services/copilot/: create-chat-completions.ts
tests/benchmarks/: tokenization-performance.test.ts
tests/integration/: basic-setup.test.ts  native-basic.test.ts  native-module.test.ts
tests/manual/: load-native.cjs
tests/phase2/: enhanced-features.test.ts
tests/verification/: api-compatibility.test.ts  build-system.test.ts  codebase-integration.test.ts  error-handling.test.ts  feature-flags.test.ts  performance-monitoring.test.ts
