[package]
name = "copilot-api-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Neon for Node.js bindings
neon = "1.0"

# Async runtime and HTTP client
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Authentication
oauth2 = "4.4"
base64 = "0.22"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# GPT tokenizer equivalent (we'll use tiktoken-rs)
tiktoken-rs = "0.5"

# For global state management
lazy_static = "1.4"

[build-dependencies]
neon-build = "0.10"